# dhcp-o82

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: release.yaml
dhcp_o82/: cli.py  o82.py
resources/: interfaces.csv
tests/: test_cli.py  test_o82.py
