[tool.poetry]
name = "dhcp_o82"
version = "0.1.0"
description = "Makes humans working with DHCP Option 82/RelayAgentInfo possible."
authors = ["Manny Garcia <mannygar@cisco.com>"]

[tool.poetry.dependencies]
python = "^3.9"
netaddr = "^0.8.0"
click = "^8.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
Flake8-pyproject = "^1.2.2"
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.isort]
# make it compatible with black
profile = "black" 
line_length = 88

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88

[tool.poetry.scripts]
dhcp-o82 = "dhcp_o82.cli:cli"